# discord_automations_bots

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py
src/shared/cogs/: ready.py
src/shared/cogs/client/: ready.py
src/shared/constants/: discord.py  prompts.py
src/shared/databases/: notion.py
src/shared/groq/: groq.py
src/shared/prompts/: generate_thread_name.py  get_prompt_category_prompt.py
src/shared/utils/: message.py  threads.py
src/walle/: walle.py
src/walle/cogs/: cogs.py  commands.py  message.py
src/walle/cogs/client/: ready.py
src/walle/cogs/guild/: message.py
src/walle/cogs/interactions/: commands.py  slash_commands.py
